# roro

./: Cargo.toml  README.md  design.txt
config/: config.toml
src/: input.rs  main.rs  notify.rs  timer.rs  ui.rs
