[package]
name = "roro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = "4.3.5"
console = "0.15.7"
notify-rust = "4.8.0"
rusty_audio = "1.4.1"
serde = "1.0.188"
serde_derive = "1.0.188"
signal-hook = "0.3.17"
toml = "0.7.6"
time = "0.2.23"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
